--- a/index.html
+++ b/index.html
@@ -12,8 +12,19 @@
 <body>
     <div class="wrapper">
         <div class="task-input">
-            <img src="bars-sort.png" alt="">
+            <img src="bars-sort.svg" alt="">
+            <input type="text" name="" id="" placeholder="Add a new task">
         </div>
+
+        <div class="controls">
+            <div class="filters">
+                <span id="all" class="active">All</span>
+                <span id="pending">Pending</span>
+                <span id="completed">Completed</span>
+            </div>
+            <button class="clear-btn">Clear All</button>
+        </div>
+        <ul class="task-box"></ul>
     </div>
 
 
