--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <div class="task-input">
             <img src="bars-sort.svg" alt="">
-            <input type="text" name="" id="" placeholder="Add a new task">
+            <input type="text" name="task" id="taskInput" placeholder="Add a new task">
         </div>
 
         <div class="controls">
